Updated the way that the value updates so that anytime checkedValue is set, the checkbox will update and emit either way.

--- a/test/resource-list-select.html
+++ b/test/resource-list-select.html
@@ -53,7 +53,7 @@
                         for (let i in this.$refs.list.$children){
                             let item = this.$refs.list.$children[i]
                             console.log(item);
-                            item.checkValue = true;
+                            console.log( item.checkValue = true);
                         }
                     },
                     setSelectedItems(value) {
