--- a/test/resource-list-select.html
+++ b/test/resource-list-select.html
@@ -24,6 +24,7 @@
                                 :attribute-one="item.title"
                                 :media="{src: 'https://via.placeholder.com/50x50', alt: '', size: 'small'}"
                                 @click="clickItem"
+                                :disabled="item.disabled"
                                 selectable
                             >
                             </polaris-resource-list-item>
@@ -75,6 +76,7 @@
                             id: 245,
                             title: 'Product 1',
                             value: 1,
+                            disabled: true
                         },
                         {
                             id: 300,
