Added select mode icon

--- a/test/resource-list-select.html
+++ b/test/resource-list-select.html
@@ -12,8 +12,8 @@
 
             <polaris-page title="Test Page">
 
+                <polaris-button icon="enableSelection" @click="dosomething">Select Mode</polaris-button>
                 <polaris-card>
-<!--                    <polaris-button icon="enableSelection" @click="dosomething">Select Mode</polaris-button>-->
                     <polaris-resource-list
                         ref="list"
                         :items="products"
