Added a select mode for now to manually mark the list as select only.

--- a/test/resource-list-select.html
+++ b/test/resource-list-select.html
@@ -27,7 +27,7 @@
                                 :media="{src: 'https://via.placeholder.com/50x50', alt: '', size: 'small'}"
                                 @click="clickItem"
                                 :disabled="item.disabled"
-                                :select-mode="selectMode"
+                                select-mode
                                 selectable
                             >
                             </polaris-resource-list-item>
