Add check value as a prop

--- a/test/resource-list-select.html
+++ b/test/resource-list-select.html
@@ -15,27 +15,27 @@
             >
 
                 <polaris-button icon="enableSelection" @click="dosomething">Select Mode</polaris-button>
-<!--                <polaris-card>-->
-<!--                    <polaris-resource-list-->
-<!--                        ref="list"-->
-<!--                        :items="products"-->
-<!--                        @on-selection-change="setSelectedItems"-->
-<!--                    >-->
-<!--                        <template slot="item" slot-scope="{item}">-->
-<!--                            <polaris-resource-list-item-->
-<!--                                :id="item.id"-->
-<!--                                :url="item.url"-->
-<!--                                :attribute-one="item.title"-->
-<!--                                :media="{src: 'https://via.placeholder.com/50x50', alt: '', size: 'small'}"-->
-<!--                                @click="clickItem"-->
-<!--                                :disabled="item.disabled"-->
-<!--                                selectable-->
-<!--                                select-mode-->
-<!--                            >-->
-<!--                            </polaris-resource-list-item>-->
-<!--                        </template>-->
-<!--                    </polaris-resource-list>-->
-<!--                </polaris-card>-->
+                <polaris-card>
+                    <polaris-resource-list
+                        ref="list"
+                        :items="products"
+                        @on-selection-change="setSelectedItems"
+                    >
+                        <template slot="item" slot-scope="{item}">
+                            <polaris-resource-list-item
+                                :id="item.id"
+                                :url="item.url"
+                                :attribute-one="item.title"
+                                :media="{src: 'https://via.placeholder.com/50x50', alt: '', size: 'small'}"
+                                @click="clickItem"
+                                :disabled="item.disabled"
+                                selectable
+                                select-mode
+                            >
+                            </polaris-resource-list-item>
+                        </template>
+                    </polaris-resource-list>
+                </polaris-card>
 
                 {{selectedItems}}
 
