--- a/test/index.html
+++ b/test/index.html
@@ -2528,7 +2528,7 @@
                 <div class="example">
                     <polaris-select
                         v-model="value6"
-                        label="Count"
+                        label="Preselected"
                         :options="[
                             {label: 'Only one', value: 'one'},
                             {label: 'Two', value: 'two'},
@@ -2552,7 +2552,7 @@
                 <div class="example">
                     <polaris-select
                         v-model="value6"
-                        label="count"
+                        label="Count (Error)"
                         :options="['one', 'two', 'three']"
                         placeholder="Select an amount"
                         error="Required">
@@ -2570,7 +2570,7 @@
                 <div class="example">
                     <polaris-select
                         v-model="value6"
-                        label="count"
+                        label="Count (Disabled)"
                         :options="['one', 'two', 'three']"
                         placeholder="Select an amount"
                         disabled>
@@ -3242,6 +3242,60 @@
     &lt;/template&gt;
 &lt;/polaris-popover&gt;</code></pre>
             </div>
+            <div class="testCase">
+                <div class="example">
+                    <polaris-popover
+                        :active="popover2"
+                        @close="popover2 = false"
+                    >
+                        <template slot="activator" slot-scope="props">
+                            <polaris-button @click="popover2 = !popover2">
+                                More actions
+                            </polaris-button>
+                        </template>
+                        <template slot="content" slot-scope="props">
+                            <polaris-popover-section>
+                                <polaris-form-layout>
+                                    <polaris-form-layout-group>
+                                        <polaris-form-layout-item>
+                                            <polaris-select
+                                                v-model="popover2Select"
+                                                label="Show all customers where:"
+                                                :options="[
+                                                {label: 'Tagged with', value: 'tagged'},
+                                                {label: 'Tagged without', value: 'notTagged'}]"
+                                            />
+                                        </polaris-form-layout-item>
+                                    </polaris-form-layout-group>
+                                    <polaris-form-layout-group>
+                                        <polaris-text-field
+                                            title="tags"
+                                            v-model="popover2Select"
+                                        />
+                                    </polaris-form-layout-group>
+                                </polaris-form-layout>
+                            </polaris-popover-section>
+                        </template>
+                    </polaris-popover>
+                </div>
+                <pre class="code"><code class="html">&lt;polaris-popover
+    :active=&quot;value9&quot;
+    @close=&quot;value9 = false&quot;&gt;
+    &lt;template slot=&quot;activator&quot; scope=&quot;props&quot;&gt;
+        &lt;polaris-button @click=&quot;value9 = !value9&quot;&gt;
+            More actions
+        &lt;/polaris-button&gt;
+    &lt;/template&gt;
+    &lt;template scope=&quot;props&quot;&gt;
+        &lt;polaris-action-list
+            :items=&quot;[
+                {content: 'Import'},
+                {content: 'Export'}
+            ]&quot;&gt;
+        &lt;/polaris-action-list&gt;
+    &lt;/template&gt;
+&lt;/polaris-popover&gt;</code></pre>
+            </div>
 
             <div class="testHeader">&lt;polaris-modal&gt;</div>
             <div class="testCase">
@@ -3320,7 +3374,15 @@
 <script>
     import PolarisDisplayText from "../src/components/PolarisDisplayText";
     import PolarisButton from "../src/components/PolarisButton";
+    import PolarisFormLayoutGroup from "../src/components/PolarisFormLayoutGroup";
+    import PolarisTextField from "../src/components/PolarisTextField";
+    import PolarisPopoverSection from "../src/components/PolarisPopoverSection";
+    import PolarisSelect from "../src/components/PolarisSelect";
+    import PolarisFormLayoutItem from "../src/components/PolarisFormLayoutItem";
     export default {
-        components: {PolarisButton, PolarisDisplayText}
+        components: {
+            PolarisFormLayoutItem,
+            PolarisSelect,
+            PolarisPopoverSection, PolarisTextField, PolarisFormLayoutGroup, PolarisButton, PolarisDisplayText}
     }
 </script>
