Fixed the selected option vs the option value to display.

--- a/test/index.html
+++ b/test/index.html
@@ -3239,6 +3239,7 @@
 
 
             <div class="testHeader">&lt;polaris-popover&gt;</div>
+            <p>Standard Action List</p>
             <div class="testCase">
                 <div class="example">
                     <polaris-popover
@@ -3277,6 +3278,7 @@
     &lt;/template&gt;
 &lt;/polaris-popover&gt;</code></pre>
             </div>
+            <p>Popover with form components</p>
             <div class="testCase">
                 <div class="example">
                     <polaris-popover
