Fix the popover.

--- a/test/index.html
+++ b/test/index.html
@@ -509,7 +509,9 @@
             </div>
             <div class="testCase">
                 <div class="example">
-                    <polaris-image src="https://vuejs.org/images/logo.png"
+                    <polaris-image
+                        style="width: 100%;"
+                        src="https://vuejs.org/images/logo.png"
                                    alt="image with source sets"
                                    :source-set="[
                                        { source: 'https://vuejs.org/images/logo.png?1',
@@ -879,12 +881,12 @@
             <div class="testCase">
                 <div class="example">
                     <polaris-avatar
-                        initials="ESC"
+                        initials="APY"
                         accessibility-label="avatar test">
                     </polaris-avatar>
                 </div>
                 <pre class="code"><code class="html">&#x3C;polaris-avatar
-    initials=&#x22;ESC&#x22;
+    initials=&#x22;APY&#x22;
     accessibility-label=&#x22;avatar test&#x22;&#x3E;
 &#x3C;/polaris-avatar&#x3E;</code></pre>
             </div>
