--- a/test/index.html
+++ b/test/index.html
@@ -3222,7 +3222,7 @@
                                 More actions
                             </polaris-button>
                         </template>
-                        <template>
+                        <template slot="content">
                             <polaris-action-list
                                 :items="[
                                     {content: 'Import'},
