Tweak the resource list.
v0.1.32

--- a/test/index.html
+++ b/test/index.html
@@ -3447,8 +3447,10 @@
     import PolarisPopoverSection from "../src/components/PolarisPopoverSection";
     import PolarisSelect from "../src/components/PolarisSelect";
     import PolarisFormLayoutItem from "../src/components/PolarisFormLayoutItem";
+    import PolarisChoiceList from "../src/components/PolarisChoiceList";
     export default {
         components: {
+            PolarisChoiceList,
             PolarisFormLayoutItem,
             PolarisSelect,
             PolarisPopoverSection,
